# resonable

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release-macos.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  jazz.tsx  platform.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: gocardless.rs  main.rs  secrets.rs
apps/desktop/src/components/: ErrorBoundary.tsx  LoadingGate.tsx
apps/desktop/src/data/: backup-mapping.ts  bindings.ts  gocardless-creds.ts  household-setup.ts  import.ts
apps/desktop/src/views/: Accounts.tsx  Categories.tsx  Clusters.tsx  Dashboard.tsx  Household.tsx  Import.tsx  Moderation.tsx  Onboarding.tsx  RuleBuilder.tsx  Rules.tsx  Settings.tsx  Tags.tsx  Transactions.tsx
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: invite.spec.ts  rules-suggest.spec.ts  smoke.spec.ts
apps/e2e/tests/lib/: app.ts
