[package]
name = "resonable-desktop"
version = "0.0.1"
description = "Resonable local-first expense tracker desktop shell"
authors = ["Resonable"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "resonable-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde-well-known"] }
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
